2008-01-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_doctest_mode): respect the user's
	settings for input separators rather than overriding them.  After
	a report by Jeff Kowalczyk <jtk-AT-yahoo.com>

	* IPython/history.py (magic_history): Add support for declaring an
	output file directly from the history command.

2008-01-21  Walter Doerwald  <walter@livinglogic.de>

	* ipipe.py: Register ipipe's displayhooks via the generic function
	generics.result_display() instead of using ipapi.set_hook().
	
2008-01-19  Walter Doerwald  <walter@livinglogic.de>

	* ibrowse.py, igrid.py, ipipe.py:
	The input object can now be passed to the constructor of the display classes.
	This makes it possible to use them with objects that implement __or__.
	Use this constructor in the displayhook instead of piping.

	* ipipe.py: Importing astyle.py is done as late as possible to
	avoid problems with circular imports.
	
2008-01-19 Ville Vainio  <vivainio@gmail.com>

	* hooks.py, iplib.py: Added 'shell_hook' to customize how
	IPython calls shell.

	* hooks.py, iplib.py: Added 'show_in_pager' hook to specify
	how IPython pages text (%page, %pycat, %pdoc etc.)

	* Extensions/jobctrl.py: Use shell_hook. New magics: '%tasks'
	and '%kill' to kill hanging processes that won't obey ctrl+C.

2008-01-16 Ville Vainio  <vivainio@gmail.com>

	* ipy_completers.py: pyw extension support for %run completer.

2008-01-11 Ville Vainio  <vivainio@gmail.com>

	* iplib.py, ipmaker.py: new rc option - autoexec. It's a list 
	of ipython commands to be run when IPython has started up
	(just before running the scripts and -c arg on command line).
	
	* ipy_user_conf.py: Added an example on how to change term 
	colors in config file (through using autoexec).

	* completer.py, test_completer.py: Ability to specify custom
	get_endidx to replace readline.get_endidx. For emacs users.
	
2008-01-10 Ville Vainio  <vivainio@gmail.com>
